test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_if_empty_stmts.draco
proc main() void : if a then elif b then else fi; corp;

