test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_if_expr_no_val_then_branch.draco
proc main() void : 

  a := if a1 then a2:=0; elif a3 then a4 else a7 fi;

corp;

